test/sema/negative/scoping2.impala
fn fun(f: fn[A](A)->A) -> A {}
