test/sema/negative/scoping2.out
scoping2.impala:1 col 27: error: 'A' not found in current scope
